// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiStat is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiStat testClass1 testClass2 css-10hx1zo-euiStat-left"
  data-test-subj="test subject string"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1xoqla4-euiTitle-l-euiStat__title-default"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props accent is rendered 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-v0lnn-euiTitle-l-euiStat__title-accent"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props center is rendered 1`] = `
<div
  class="euiStat css-1knrvjp-euiStat-center"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1xoqla4-euiTitle-l-euiStat__title-default"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props danger is rendered 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-r7lk1s-euiTitle-l-euiStat__title-danger"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props default is rendered 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1xoqla4-euiTitle-l-euiStat__title-default"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props hexcode colors are rendered 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-u22j5q-euiTitle-l-euiStat__title"
    style="color:#EB1919"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props l is rendered 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1xoqla4-euiTitle-l-euiStat__title-default"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props left is rendered 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1xoqla4-euiTitle-l-euiStat__title-default"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props loading is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiStat testClass1 testClass2 css-10hx1zo-euiStat-left"
  data-test-subj="test subject string"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-7d62ue-euiTitle-l-euiStat__title-default-isLoading"
  >
    --
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    Statistic is loading
  </p>
</div>
`;

exports[`EuiStat props m is rendered 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-s10lms-euiTitle-m-euiStat__title-default"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props primary is rendered 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1mvd3te-euiTitle-l-euiStat__title-primary"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props render with custom description element 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <div
      aria-hidden="true"
    >
      <div>
        description
      </div>
    </div>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-u22j5q-euiTitle-l-euiStat__title"
    style="color:#EB1919"
  >
    title
  </p>
</div>
`;

exports[`EuiStat props render with custom title element 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <div
    aria-hidden="true"
    class="euiTitle euiStat__title css-1xoqla4-euiTitle-l-euiStat__title-default"
  >
    <div>
      title
    </div>
  </div>
</div>
`;

exports[`EuiStat props right is rendered 1`] = `
<div
  class="euiStat css-dsvwis-euiStat-right"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1xoqla4-euiTitle-l-euiStat__title-default"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props s is rendered 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1qa61ob-euiTitle-s-euiStat__title-default"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props subdued is rendered 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1g16j5h-euiTitle-l-euiStat__title-subdued"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props success is rendered 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1c2unxr-euiTitle-l-euiStat__title-success"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props title and description are reversed 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1xoqla4-euiTitle-l-euiStat__title-default"
  >
    title
  </p>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    class="euiScreenReaderOnly"
  >
    title description
  </p>
</div>
`;

exports[`EuiStat props xs is rendered 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-1ns3k2c-euiTitle-xs-euiStat__title-default"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props xxs is rendered 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-ent020-euiTitle-xxs-euiStat__title-default"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`EuiStat props xxxs is rendered 1`] = `
<div
  class="euiStat css-10hx1zo-euiStat-left"
>
  <div
    class="euiText euiStat__description css-1vkrgyt-euiText-s"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="euiTitle euiStat__title css-16l0ulc-euiTitle-xxxs-euiStat__title-default"
  >
    title
  </p>
  <p
    class="euiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;
